Salesforce LWC/force-app/main/default/objects/Account/fields/Calculate_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Opportunity_Amount__c</fullName>
    <label>Calculate Opportunity Amount</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>