Salesforce LWC/force-app/main/default/objects/Account/fields/CountryName__c.field-meta.xml
<CustomField>
    <fullName>CountryName__c</fullName>
    <label>CountryName</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Bhutan</fullName>
            </value>
            <value>
                <fullName>Nepal</fullName>
            </value>
            <value>
                <fullName>Itely</fullName>
            </value>
            <value>
                <fullName>Iran</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>