Salesforce LWC/force-app/main/default/objects/Account/fields/Custom_Address__c.field-meta.xml
<CustomField>
    <fullName>Custom_Address__c</fullName>
    <label>Custom Address</label>
    <type>Address</type>
</CustomField>