Salesforce LWC/force-app/main/default/objects/Account/fields/Customer_Case__c.field-meta.xml
<CustomField>
    <fullName>Customer_Case__c</fullName>
    <label>Customer Case</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>