Salesforce LWC/force-app/main/default/objects/Account/fields/Demooo__c.field-meta.xml
<CustomField>
    <fullName>Demooo__c</fullName>
    <label>Demooo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>