Salesforce LWC/force-app/main/default/objects/Account/fields/is_VIP__c.field-meta.xml
<CustomField>
    <fullName>is_VIP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is VIP</label>
    <type>Checkbox</type>
</CustomField>