Salesforce LWC/force-app/main/default/objects/Account/fields/Locked_Field__c.field-meta.xml
<CustomField>
    <fullName>Locked_Field__c</fullName>
    <description>Locked</description>
    <formula>TEXT(  Active__c ) &amp; IMAGE(&quot;/img/samples/locking30.gif&quot;, &quot;Locked&quot;, 30, 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Locked Field</label>
    <type>Text</type>
</CustomField>