Salesforce LWC/force-app/main/default/objects/Account/fields/Partner_Case__c.field-meta.xml
<CustomField>
    <fullName>Partner_Case__c</fullName>
    <label>Partner Case</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>