Salesforce LWC/force-app/main/default/objects/Account/fields/RICH_TEXT_AREA1__c.field-meta.xml
<CustomField>
    <fullName>RICH_TEXT_AREA1__c</fullName>
    <label>RICH TEXT AREA</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>