Salesforce LWC/force-app/main/default/objects/Account/fields/text_area__c.field-meta.xml
<CustomField>
    <fullName>text_area__c</fullName>
    <label>text area</label>
    <type>TextArea</type>
</CustomField>