Salesforce LWC/force-app/main/default/objects/Account/fields/Text_Area_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Text_Area_Encrypted__c</fullName>
    <label>Text Area Encrypted</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>