Salesforce LWC/force-app/main/default/objects/Account/fields/TEXT_AREA_LONG__c.field-meta.xml
<CustomField>
    <fullName>TEXT_AREA_LONG__c</fullName>
    <label>TEXT AREA LONG</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>