Salesforce LWC/force-app/main/default/objects/Account/fields/Total_Case__c.field-meta.xml
<CustomField>
    <fullName>Total_Case__c</fullName>
    <label>Total Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>