Salesforce LWC/force-app/main/default/objects/Account/validationRules/AnnualRevenue_Should_Not_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>AnnualRevenue_Should_Not_blank</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Not ( $Permission.Admin_Permission ),ISBLANK( AnnualRevenue ))</errorConditionFormula>
    <errorMessage>Annual Revenue SHhould not blank.</errorMessage>
</ValidationRule>