Salesforce LWC/force-app/main/default/objects/Account/validationRules/MailingStreet_Should_not_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>MailingStreet_Should_not_blank</fullName>
    <active>false</active>
    <description>MailingStreet_Should_not_blank</description>
    <errorConditionFormula>ISBLANK( BillingStreet )</errorConditionFormula>
    <errorMessage>MailingStreet_Should_not_blank</errorMessage>
</ValidationRule>